<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28sp"
        android:paddingTop="20sp"
        android:text="@string/menuTitle"
        android:textSize="20sp" />

    <Button
        android:id="@+id/twoPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuTitle"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:text="@string/twoPlayerButton" />

    <Button
        android:id="@+id/compPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twoPlayerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/singlePlayerButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:text="@string/settingsButton"
        android:layout_below="@+id/compPlayerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hiddenGame"
        android:text="@string/hiddenGame"
        android:layout_below="@+id/settingsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"/>

</RelativeLayout>