<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marble"
    tools:context="com.example.tictactoehpv3.BoardView"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Current_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_player"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="65dp"
            android:layout_marginEnd="0sp"
            android:layout_marginRight="0sp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/Current_player"
            android:layout_toRightOf="@+id/Current_player"
            android:text="@string/seconds_remaining_30"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.tictactoehpv3.hiddenGameActivity">

        <com.example.tictactoehpv3.BoardView
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/getQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:text="@string/start_timer"
            android:textSize="30sp" />


    </RelativeLayout>

</LinearLayout>